--- a/conf/service_conf.yaml
+++ b/conf/service_conf.yaml
@@ -124,3 +124,22 @@ redis:
 #     - "RAGFlow" # display name
 #     - "" # sender email address
 #   mail_frontend_url: "https://your-frontend.example.com"
+# ldap:
+#   enabled: true
+#   server_host: "ldap.example.com"
+#   server_port: 389
+#   use_ssl: false
+#   bind_dn: "cn=admin,dc=example,dc=com"
+#   bind_password: "admin_password"
+#   search_base: "ou=users,dc=example,dc=com"
+#   search_filter: "(objectClass=person)"
+#   user_dn_template: "uid={username},ou=users,dc=example,dc=com"
+#   attr_mapping:
+#     username: "uid"
+#     email: "mail"
+#     nickname: "displayName"
+#     first_name: "givenName"
+#     last_name: "sn"
+#   auto_create_user: true
+#   sync_enabled: true
+#   sync_interval: 30
