--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,6 +131,7 @@ dependencies = [
     "python-calamine>=0.4.0",
     "litellm>=1.74.15.post1",
     "flask-mail>=0.10.0",
+    "ldap3>=2.9.0,<3.0.0",
 ]
 
 [project.optional-dependencies]
